@@ -37,6 +37,7 @@ enum MalagaSymbol {
 	MS_MOOD,
 	MS_VAPAA_JALKIOSA,
 	MS_NEGATIVE,
+	MS_POSSIBLE_GEOGRAPHICAL_NAME,
 	MS_LAST_SYMBOL
 };
 
