@@ -1,3 +1,6 @@
+2010-09-27 Harri Pitkänen <hatapitk@iki.fi>
+	* GC: Don't suggest using lower case when the word may be a geographical name.
+
 2010-09-21 Harri Pitkänen <hatapitk@iki.fi>
 	* GC: Accept bracketed reference at the end of sentence.
 
